[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "Flask-PyMemcache"
version = "0.0.6"
description = "pymemcache integration for Flask"
readme = "README.rst"
license = "MIT"
authors = [
    { name = "Inada Naoki", email = "songofacandy@gmail.com" },
]
dependencies = [
    "Flask",
    "pymemcache>=1.3.4",
    "six",
]
dev-dependencies = [
    "pytest",
]

[project.urls]
Homepage = "https://github.com/KLab/Flask-PyMemcache"

[tool.hatch.build.targets.sdist]
include = [
    "/flask_pymemcache",
]
