[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "Flask-PyMemcache"
version = "0.0.8"
description = "pymemcache integration for Flask"
requires-python = ">=3.7"
readme = "README.rst"
license = "MIT"
authors = [
    { name = "Inada Naoki", email = "songofacandy@gmail.com" },
]
dependencies = [
    "Flask",
    "pymemcache>=3.4.4",
]
dev-dependencies = [
    "pytest",
]

[project.urls]
Homepage = "https://github.com/KLab/Flask-PyMemcache"

[tool]
rye = { dev-dependencies = [
    "pytest>=8.0.2",
] }

[tool.hatch.build.targets.sdist]
packages = ["src/flask_pymemcache.py"]

[tool.hatch.build.targets.wheel]
packages = ["src/flask_pymemcache.py"]
